@@ -5,7 +5,11 @@ import pytest
 
 from rio_tiler import colormap
 from rio_tiler.cmap_data import _default_cmaps
-from rio_tiler.errors import InvalidColorMapName
+from rio_tiler.errors import (
+    ColorMapAlreadyRegistered,
+    InvalidColorMapName,
+    InvalidFormat,
+)
 
 
 def test_get_cmaplist():
@@ -24,7 +28,7 @@ def test_cmapObject():
     cmap.register("empty", colormap.EMPTY_COLORMAP)
     assert len(cmap.list()) == 168
 
-    with pytest.raises(Exception):
+    with pytest.raises(ColorMapAlreadyRegistered):
         cmap.register("empty", colormap.EMPTY_COLORMAP)
 
     assert cmap.get("empty")
@@ -103,7 +107,7 @@ def test_apply_cmap():
     mask[5:, 5:] = 255
     numpy.testing.assert_array_equal(m, mask)
 
-    with pytest.raises(Exception):
+    with pytest.raises(InvalidFormat):
         data = numpy.repeat(data, 3, axis=0)
         colormap.apply_cmap(data, cm)
 
